Fixed selection bug overwriting when selecting in the entities tree
Made an attempt to fix the entities tree selection bug where it would overwrite the settings when selecting multiple entities. The design settings has now been moved from the design file to the platform settings.